session_guard 적용

--- a/public/done.html
+++ b/public/done.html
@@ -180,6 +180,7 @@ document.getElementById("goReportBtn")?.addEventListener("click", () => {
   location.href = `./report.html?sid=${encodeURIComponent(sid2)}`;
 });
 </script>
+<script src="./session-guard.js"></script>
 
 
 </body>
