--- a/public/report.html
+++ b/public/report.html
@@ -191,8 +191,8 @@ function computeVoiceSQ(stages){
 
   return { cadence, loadScore, arousal, vsq };
 }
-
-
   </script>
+  <script src="./session-guard.js"></script>
+
 </body>
 </html>
