--- a/public/survey.html
+++ b/public/survey.html
@@ -9,7 +9,7 @@
 <body>
   <main class="container">
     <div class="header">
-      <h2>📋 설문 시작</h2>
+      <h2>설문 시작</h2>
       <p class="muted">분석을 위해 설문을 시작해 주세요.</p>
     </div>
 
@@ -24,5 +24,7 @@
   </main>
 
   <script src="./survey-entry.js"></script>
+  <script src="./session-guard.js"></script>
+
 </body>
 </html>
