--- a/public/voice_info.html
+++ b/public/voice_info.html
@@ -176,6 +176,6 @@
     location.href = `voice_test.html?sid=${encodeURIComponent(sid)}`;
   };
 </script>
-
+<script src="./session-guard.js"></script>
 </body>
 </html>
