--- a/public/voice_test.html
+++ b/public/voice_test.html
@@ -355,6 +355,6 @@ if (!sid) return;
 
 <div style="margin-top: 40px;">
     </div>
-
+<script src="./session-guard.js"></script>
     </body>
 </html>
