설문시작 버튼 액티브

--- a/public/report.html
+++ b/public/report.html
@@ -16,7 +16,7 @@
   <h3>Stage별 결과</h3>
   <div id="stageTable"></div>
 
-  <button id="goSurveyBtn">설문 계속하기</button>
+<button data-nav="survey.html">설문시작</button>
 
   <script>
     const API_BASE = "https://rhythme-server-as3ud42lpa-du.a.run.app";
