--- a/public/index.html
+++ b/public/index.html
@@ -143,10 +143,12 @@
         <div id="questionCount" class="step-indicator">1 / 10</div>
         <h3 id="questionText" class="question-title"></h3>
         <div class="answer-group">
-<button class="ans-btn" onclick="handleAnswer(0, event)">전혀 아니다</button>
-<button class="ans-btn" onclick="handleAnswer(1, event)">약간 그렇다</button>
-<button class="ans-btn" onclick="handleAnswer(2, event)">상당히 그렇다</button>
-<button class="ans-btn" onclick="handleAnswer(3, event)">매우 그렇다</button>
+<button class="ans-btn" onclick="handleAnswer(1, event)">전혀 아니다</button>
+<button class="ans-btn" onclick="handleAnswer(2, event)">아니다</button>
+<button class="ans-btn" onclick="handleAnswer(3, event)">보통</button>
+<button class="ans-btn" onclick="handleAnswer(4, event)">그렇다</button>
+<button class="ans-btn" onclick="handleAnswer(5, event)">매우 그렇다</button>
+
         </div>
     </section>
 
