문제왕창. 이전 버젼으로 돌리기

--- a/public/report.html
+++ b/public/report.html
@@ -10,7 +10,7 @@
 <body>
   <h2> 음성 리포트</h2>
   <div class="muted" id="meta"></div>
-
+  <button id="copySidBtn" class="btn">세션코드 복사</button>
   <div class="row" id="cards"></div>
 
   <h3>Stage별 결과</h3>
