다음으로 제출 명시화 안하기. qeeg

--- a/public/index.html
+++ b/public/index.html
@@ -184,7 +184,7 @@
         <button class="next-btn file-btn" onclick="document.getElementById('qeegEO').click()">파일 선택</button>
     </div>
 
-<button type="button" id="uploadBtn" class="next-btn" onclick="submitAll(event)">데이터 전송</button>
+<button type="button" id="uploadBtn" class="next-btn" onclick="submitAll(event)">다음</button>
 
 <button type="button" id="nextStepBtn" class="next-btn secondary-btn" style="display:none;">
   음성분석 이어하기
